Remove free response structures and fields
